--- a/_layouts/indicator.html
+++ b/_layouts/indicator.html
@@ -74,23 +74,15 @@ function copyUrl(){
 	        }
 	</script>
 <script src="//code.jquery.com/jquery-3.4.1.min.js">
-var popOverSettings ={
-  placement : 'top',
+  var content = '<img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data='+ encodeURIComponent(window.location.href) + '">';
+  $(".qr").popover({
+  content: function () {
+        return content;
+    },
   trigger : 'hover',
   html : true,
-  selector: '[rel="popover"]', //Sepcify the selector here
-  content: function () {
-        return $('#popover-content').html();
-    }
-}
-$('body').popover(popOverSettings);
-$(document).ready(function(){
-    $('[data-toggle="popover"]').popover({
-        placement : 'top',
-		trigger : 'hover',
-        html : true,
-        content : '<img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data='+ encodeURIComponent(window.location.href) + '">'
-    });
+  placement: "bottom",
+  title : "QR"
 });
 </script>
 
@@ -124,7 +116,7 @@ $(document).ready(function(){
 <button class="ks" title="카카오스토리 공유 새창으로 열림" type="button" title="카카오스토리에 저장하기" onclick="window.open(url_combine_ks, '', 'scrollbars=no, width=600,height=600'); return false;"><i class="xi-kakaostory" aria-hidden="true"></i><span class="sr-only">카카오스토리</span></button>
 <button class="bm" title="즐겨찾기" type="button" onclick="addFavorite();"><i class="xi-star" aria-hidden="true"></i><span class="sr-only">즐겨찾기</span></button>
 <button class="uc" title="URL 복사" type="button" onclick="copyUrl();"><i>URL</i><span class="sr-only">URL 복사</span></button>
-<button class="qr" title="QR코드 팝업" type="button"   data-toggle="popover"  title="QR"><i class="xi-qr-code"></i><span class="sr-only">QR코드 팝업</span></button>
+<button class="qr" title="QR코드" type="button"   data-toggle="popover"><i class="xi-qr-code"></i><span class="sr-only">QR코드 팝업</span></button>
 </div>
 
 
