--- a/_layouts/indicator.html
+++ b/_layouts/indicator.html
@@ -84,9 +84,7 @@ $(function(){
     html: true,
     title: 'QR',
     selector: '[rel="popover"]', //Sepcify the selector here
-    content: function () {
-        return '<img class="img-fluid" src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data='+ encodeURIComponent(window.location.href) + '">';
-    }
+    content: 'Code Loading...'
 }
     $('.qr').popover(popOverSettings);
 
