--- a/_layouts/indicator.html
+++ b/_layouts/indicator.html
@@ -107,7 +107,7 @@ function copyUrl(){
 <button class="qr" title="QR코드" type="button"  data-toggle="modal" data-target="#qrcode"><i class="xi-qr-code"></i><span class="sr-only">QR코드 팝업</span></button>
 </div>
 
-<div class="modal fade" id="qrcode" tabindex="-1" role="dialog" aria-labelledby="qrcode" aria-hidden="true">
+<div class="modal fade" id="qrcode"  role="dialog" aria-labelledby="qrcode" aria-hidden="true">
   <div class="modal-dialog" style="width:200px;">
     <div class="modal-content" style="max-width:100%;">
 <div class="modal-header">
