--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -25,6 +25,7 @@ if(window.wcs) {
  font-family: 'Nanum Gothic', sans-serif;
 }
 </style>
+<script src="https://kostat-sdg-kor.github.io/sdg-indicators/public/bootstrap-popover-x.js"></script>
 {% comment %}
 This space intended for custom third-party javascript.
 {% endcomment %}
