--- a/_layouts/indicator.html
+++ b/_layouts/indicator.html
@@ -104,7 +104,7 @@ function copyUrl(){
 <button class="ks" title="카카오스토리 공유 새창으로 열림" type="button" title="카카오스토리에 저장하기" onclick="window.open(url_combine_ks, '', 'scrollbars=no, width=600,height=600'); return false;"><i class="xi-kakaostory" aria-hidden="true"></i><span class="sr-only">카카오스토리</span></button>
 <button class="bm" title="즐겨찾기" type="button" onclick="addFavorite();"><i class="xi-star" aria-hidden="true"></i><span class="sr-only">즐겨찾기</span></button>
 <button class="uc" title="URL 복사" type="button" onclick="copyUrl();"><i>URL</i><span class="sr-only">URL 복사</span></button>
-<button class="qr" title="QR코드" type="button"  data-toggle="popover-x" data-target="#qrCode"><i class="xi-qr-code"></i><span class="sr-only">QR코드 팝업</span></button>
+<button class="qr" title="QR코드" type="button"  data-toggle="popover-x" data-target="#qrCode" data-trigger="hover click"><i class="xi-qr-code"></i><span class="sr-only">QR코드 팝업</span></button>
 </div>
 
 <div id="qrCode" class="popover ppopover-info">
