--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -81,7 +81,6 @@ body.contrast-high {
 
 .article-share {  right: calc(50% - 430px - 38px - 160px + 2px); margin: 0;position: fixed;bottom: 240px; opacity: 1; z-index: 1;  width: 40px; }
 .article-share ul li ~ li { margin-top: 5px; }
-.article-share button { display: block; width: 40px; height: 40px; border-radius: 5px; font-size: 18px; }
 .article-share .like { border: 1px solid #ced4da; }
 .article-share .like .title { display: block; height: 16px; font-size: 14px; text-align: center; color: #f85265; }
 .article-share .like .count { font-size: 14px; line-height: 14px; color: #495057; display: block; }
@@ -94,26 +93,17 @@ body.contrast-high {
 .article-share .uc { background-color: #6c757e; color: #fff; font-size: 12px; }
 .article-share .qr { background-color: #000000; color: #ffffff; font-size: 24px; }
 button,input,optgroup,select,textarea { font-family: inherit; font-size: inherit; font-weight:inherit; margin: 0;}
-button { border: 0; padding: 0; background: none; cursor: pointer; margin: 3px 0px;}
+button { border: 0; padding: 0; background: none; cursor: pointer;}
 
 @media screen and (max-width: 498px) {
-	#shareBtnContainer { width: 200px; }
+	.article-share {  right: calc(50% - 430px - 38px - 160px + 2px); margin: 0;position: fixed;bottom: 240px; opacity: 1; z-index: 1;  width: 40px; }
+	.article-share button { display: block; width: 40px; height: 40px; border-radius: 5px; font-size: 18px;  margin: 3px 0px;}
 }
 @media screen and (min-width: 1280px) {
-	#shareBtnContainer {
-		width: 36px; margin: 0;
-		position: fixed;
-		bottom: 78px; right: calc(50% - 430px - 38px - 160px + 2px);
-		opacity: 1;
-	}
-	.shareBtn { margin: 1px 0; }
+	.article-share {  text-align: center; }
+	.article-share button { display: block; width: 40px; height: 40px; border-radius: 5px; font-size: 18px;  margin: 0px 2px; float: right;}
 }
 
-.shareButton { 
-	width: 36px;
-	padding: 4px 0px;
-	cursor: pointer;
-}
 
 @media print {
     a:after {
