--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -80,7 +80,7 @@ body.contrast-high {
 
 @media screen and (max-width: 498px) {
 	.article-share {  text-align: center; }
-	.article-share button { display: block; width: 40px; height: 40px; border-radius: 5px; font-size: 18px;  margin: 5px 1px; float: right;}
+	.article-share button { display: block; width: 40px; height: 40px; border-radius: 5px; font-size: 18px;  margin: 5px 1px; float: left;}
 
 }
 @media screen and (min-width: 1280px) {
