--- a/_layouts/reportingstatus.html
+++ b/_layouts/reportingstatus.html
@@ -104,6 +104,6 @@
   {% endif %}
 
   <!--{{ content }}-->
-  <strong> * {{ page.t.general.reporting_status_comment }}</strong>
+ * {{ page.t.general.reporting_status_comment }}
 </div>
 {% include footer.html %}
