--- a/_layouts/indicator.html
+++ b/_layouts/indicator.html
@@ -106,11 +106,11 @@ function copyUrl(){
 <button class="fb" title="페이스북 공유 새창으로 열림" type="button" id="shareFacebook" onclick="window.open(url_combine_fb, '', 'scrollbars=no, width=600,height=600'); return false;"><i class="xi-facebook" aria-hidden="true"></i><span class="sr-only">페이스북</span></button>
 <button class="tw" title="트위터 공유 새창으로 열림" type="button" onclick="twitter2(); return false;"><i class="xi-twitter" aria-hidden="true" onclick="window.open(url_combine_tw, '', 'scrollbars=no, width=600,height=600'); return false;"></i><span class="sr-only">트위터</span></button>
 <button class="bd" title="밴드 공유 새창으로 열림" type="button" onclick="window.open(url_combine_band, '', 'scrollbars=no, width=584,height=635'); return false;"><i></i><span class="sr-only">밴드</span></button>
-<button class="kt" title="카카오톡 공유 새창으로 열림" id="kakao-link-btn" type="button" onclick="sendKakao();"><i class="xi-kakaotalk" aria-hidden="true"></i><span class="sr-only">카카오톡</span></button>
-<button class="ks" title="카카오스토리 공유 새창으로 열림" type="button" title="카카오스토리에 저장하기" onclick="window.open(url_combine_ks, '', 'scrollbars=no, width=600,height=600'); return false;"><i class="xi-kakaostory" aria-hidden="true"></i><span class="sr-only">카카오스토리</span></button>
-<button class="bm" title="즐겨찾기" type="button" onclick="addFavorite();"><i class="xi-star" aria-hidden="true"></i><span class="sr-only">즐겨찾기</span></button>
-<button class="uc" title="URL 복사" type="button" onclick="copyUrl();"><i>URL</i><span class="sr-only">URL 복사</span></button>
-<button class="qr" title="QR코드" type="button"  data-toggle="popover-x" data-target="#qrCode" data-trigger="click" data-placement="bottom-right"><i class="xi-qr-code"></i><span class="sr-only">QR코드 팝업</span></button>
+<!--<button class="kt" title="카카오톡 공유 새창으로 열림" id="kakao-link-btn" type="button" onclick="sendKakao();"><i class="xi-kakaotalk" aria-hidden="true"></i><span class="sr-only">카카오톡</span></button>-->
+<!--<button class="ks" title="카카오스토리 공유 새창으로 열림" type="button" title="카카오스토리에 저장하기" onclick="window.open(url_combine_ks, '', 'scrollbars=no, width=600,height=600'); return false;"><i class="xi-kakaostory" aria-hidden="true"></i><span class="sr-only">카카오스토리</span></button>-->
+<!--<button class="bm" title="즐겨찾기" type="button" onclick="addFavorite();"><i class="xi-star" aria-hidden="true"></i><span class="sr-only">즐겨찾기</span></button>-->
+<!--<button class="uc" title="URL 복사" type="button" onclick="copyUrl();"><i>URL</i><span class="sr-only">URL 복사</span></button>-->
+<button class="qr" title="QR코드" type="button"  data-toggle="popover-x" data-target="#qrCode" data-trigger="click" data-placement="bottom bottom-right"><i class="xi-qr-code"></i><span class="sr-only">QR코드 팝업</span></button>
 </div>
 	
 </div>
