--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -84,7 +84,7 @@ body.contrast-high {
 
 }
 @media screen and (min-width: 1280px) {
-	.article-share {  right: calc(50% - 430px - 38px - 160px + 2px); margin: 0;position: fixed;bottom: 240px; opacity: 1; z-index: 1;  width: 40px; }
+	.article-share {  right: calc(50% - 430px - 38px - 160px + 2px); margin: 0;position: fixed; top: 420px; opacity: 1; z-index: 1;  width: 40px; }
 	.article-share button { display: block; width: 40px; height: 40px; border-radius: 5px; font-size: 18px;  margin: 3px 0px;}
 }
 
