--- a/_layouts/indicator.html
+++ b/_layouts/indicator.html
@@ -121,7 +121,7 @@ function copyUrl(){
   <div class="arrow"></div>
   <h3 class="popover-title">
     <span class="close pull-right" data-dismiss="popover-x">&times;</span>
-    QR
+    QR({{ page.indicator.slug }})
   </h3>
   <div class="popover-content">
     	<script>
