--- a/_layouts/goals.html
+++ b/_layouts/goals.html
@@ -38,6 +38,11 @@
         {% endif %}
     </div>
 </div>
-  
+<div class="zip-download-container" style="float:left; padding: 0px 100px;">
+    <a href="{{ page.t.frontpage.indicators_download_url }}" class="btn btn-primary btn-download" aria-describedby="zip-download-info">
+        {{ page.t.frontpage.indicators_download }}
+    </a>
+</div> 
+
 </div>
 {% include footer.html %}
