--- a/_layouts/goals.html
+++ b/_layouts/goals.html
@@ -25,7 +25,7 @@
         </div>
     </div>
   
-<div class="zip-download-container">
+<div class="zip-download-container" style="float:left;">
     <a href="{{ page.remote_data_prefix }}/zip/{{ site.data.zip.filename }}"
        class="btn btn-primary btn-download" aria-describedby="zip-download-info">
         {{ page.t.frontpage.download_all }}
