--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -97,6 +97,7 @@ body.contrast-high {
 .article-share .kt { background: url(https://kostat-sdg-kor.github.io/sdg-indicators/assets/img/shared/kt.png); background-size: 40px 40px; }
 .article-share .bd { background: url(https://kostat-sdg-kor.github.io/sdg-indicators/assets/img/shared/bd.png); background-size: 40px 40px; }
 .article-share .qt { background: url(https://kostat-sdg-kor.github.io/sdg-indicators/assets/img/shared/qt.png); background-size: 40px 40px; }
+.article-share .li { background: url(https://kostat-sdg-kor.github.io/sdg-indicators/assets/img/shared/li.png); background-size: 40px 40px; }
 .article-share .ks { background-color: #ffe23a; color: #fff; }
 .article-share .bm { background-color: #286dc0; color: #fff; }
 .article-share .uc { background-color: #6c757e; color: #fff; font-size: 12px; }
