--- a/_layouts/indicator.html
+++ b/_layouts/indicator.html
@@ -15,7 +15,7 @@ var url_default_fb = "https://www.facebook.com/sharer/sharer.php?u=";
 var url_default_tw_txt = "https://twitter.com/intent/tweet?text=";
 var url_default_tw_url = "&url=";
 var url_default_band = "http://band.us/plugin/share?body=";
-var url_default_linkedin = "http://www.linkedin.com/cws/share?url=";
+var url_default_li = "http://www.linkedin.com/cws/share?url=";
 var url_route_band = "&route=";
 var url_default_naver = "http://share.naver.com/web/shareView.nhn?url=";
 var title_default_naver = "&title=";
