--- a/_layouts/indicator.html
+++ b/_layouts/indicator.html
@@ -114,8 +114,8 @@ function copyUrl(){
 <!--<button class="ks" title="카카오스토리 공유 새창으로 열림" type="button" title="카카오스토리에 저장하기" onclick="window.open(url_combine_ks, '', 'scrollbars=no, width=600,height=600'); return false;"><span class="sr-only">카카오스토리</span></button>-->
 <!--<button class="bm" title="즐겨찾기" type="button" onclick="addFavorite();"><span class="sr-only">즐겨찾기</span></button>-->
 <!--<button class="uc" title="URL 복사" type="button" onclick="copyUrl();"><span class="sr-only">URL 복사</span></button>-->
-<button class="qr" title="QR코드" type="button"  data-toggle="popover-x" data-target="#qrCode" data-trigger="click" data-placement="bottom bottom-left"><i class="xi-qr-code"></i><span class="sr-only">QR코드 팝업</span></button>
-<button class="qt" title="인용" type="button"  data-toggle="popover-x" data-target="#quote" data-trigger="click" data-placement="bottom bottom-left"><span class="sr-only">인용 팝업</span></button>
+<button class="qr" title="QR코드" type="button"  data-toggle="popover-x" data-target="#qrCode" data-trigger="click" data-placement="bottom bottom-left" data-container="body"><i class="xi-qr-code"></i><span class="sr-only">QR코드 팝업</span></button>
+<button class="qt" title="인용" type="button"  data-toggle="popover-x" data-target="#quote" data-trigger="click" data-placement="bottom bottom-left" data-container="body"><span class="sr-only">인용 팝업</span></button>
 </div>
 	
 </div>
