--- a/_layouts/indicator.html
+++ b/_layouts/indicator.html
@@ -106,16 +106,16 @@ function copyUrl(){
 	
 <!-- SNS 공유 버튼 -->
 <div class="article-share">
-<button class="fb" title="페이스북 공유 새창으로 열림" type="button" id="shareFacebook" onclick="window.open(url_combine_fb, '', 'scrollbars=no, width=600,height=600'); return false;"><span class="sr-only">페이스북</span></button>
-<button class="tw" title="트위터 공유 새창으로 열림" type="button" onclick="window.open(url_combine_tw, '', 'scrollbars=no, width=600,height=600'); return false;"><span class="sr-only">트위터</span></button>
-<button class="bd" title="밴드 공유 새창으로 열림" type="button" onclick="window.open(url_combine_band, '', 'scrollbars=no, width=584,height=635'); return false;"><span class="sr-only">밴드</span></button>
-<button class="kt" title="카카오톡 공유 새창으로 열림" id="kakao-link-btn" type="button" onclick="sendKakao();"><span class="sr-only">카카오톡</span></button>
-<button class="li" title="링크드인 공유 새창으로 열림" type="button" onclick="window.open(url_combine_li, '', 'scrollbars=no, width=600,height=600'); return false;"><span class="sr-only"></span></button>
-<!--<button class="ks" title="카카오스토리 공유 새창으로 열림" type="button" title="카카오스토리에 저장하기" onclick="window.open(url_combine_ks, '', 'scrollbars=no, width=600,height=600'); return false;"><span class="sr-only">카카오스토리</span></button>-->
-<!--<button class="bm" title="즐겨찾기" type="button" onclick="addFavorite();"><span class="sr-only">즐겨찾기</span></button>-->
-<!--<button class="uc" title="URL 복사" type="button" onclick="copyUrl();"><span class="sr-only">URL 복사</span></button>-->
-<button class="qr" title="QR코드" type="button"  data-toggle="popover-x" data-target="#qrCode" data-trigger="click" data-placement="bottom bottom-left" data-container="body"><i class="xi-qr-code"></i><span class="sr-only">QR코드 팝업</span></button>
-<button class="qt" title="인용" type="button"  data-toggle="popover-x" data-target="#quote" data-trigger="click" data-placement="bottom bottom-left" data-container="body"><span class="sr-only">인용 팝업</span></button>
+	<button class="fb" title="{{ page.t.indicator.share_facebook }}" type="button" id="shareFacebook" onclick="window.open(url_combine_fb, '', 'scrollbars=no, width=600,height=600'); return false;"><span class="sr-only">페이스북</span></button>
+	<button class="tw" title="{{ page.t.indicator.share_twitter }}" type="button" onclick="window.open(url_combine_tw, '', 'scrollbars=no, width=600,height=600'); return false;"><span class="sr-only">트위터</span></button>
+	<button class="li" title="{{ page.t.indicator.share_linkedin }}" type="button" onclick="window.open(url_combine_li, '', 'scrollbars=no, width=600,height=600'); return false;"><span class="sr-only"></span></button>
+	<button class="bd" title="{{ page.t.indicator.share_band }}" type="button" onclick="window.open(url_combine_band, '', 'scrollbars=no, width=584,height=635'); return false;"><span class="sr-only">밴드</span></button>
+	<button class="kt" title="{{ page.t.indicator.share_kakaotalk }}" id="kakao-link-btn" type="button" onclick="sendKakao();"><span class="sr-only">카카오톡</span></button>
+	<!--<button class="ks" title="카카오스토리 공유 새창으로 열림" type="button" title="카카오스토리에 저장하기" onclick="window.open(url_combine_ks, '', 'scrollbars=no, width=600,height=600'); return false;"><span class="sr-only">카카오스토리</span></button>-->
+	<!--<button class="bm" title="즐겨찾기" type="button" onclick="addFavorite();"><span class="sr-only">즐겨찾기</span></button>-->
+	<!--<button class="uc" title="URL 복사" type="button" onclick="copyUrl();"><span class="sr-only">URL 복사</span></button>-->
+	<button class="qr" title="{{ page.t.indicator.share_qrcode }}" type="button"  data-toggle="popover-x" data-target="#qrCode" data-trigger="click" data-placement="bottom bottom-left" data-container="body"><i class="xi-qr-code"></i><span class="sr-only">QR코드 팝업</span></button>
+	<button class="qt" title="{{ page.t.indicator.share_citation }}" type="button"  data-toggle="popover-x" data-target="#quote" data-trigger="click" data-placement="bottom bottom-left" data-container="body"><span class="sr-only">인용 팝업</span></button>
 </div>
 	
 </div>
@@ -138,7 +138,7 @@ function copyUrl(){
   <div class="arrow"></div>
   <h3 class="popover-title">
     <span class="close pull-right" data-dismiss="popover-x">&times;</span>
-    {{ page.t.general.quote }}
+    {{ page.t.indicator.share_citation }}
   </h3>
   <div class="popover-content">
 SDGs 데이터 플랫폼(kostat.go.kr/sdg) {{ page.indicator.slug }} (<span id="date"></span>)
